# iCloud-mail-cleaner

./: .gitignore  .pdm-python.OFF  README.md  README_original.md  config.ini  icloud-cleaner-oo.ipynb  icloud-cleaner.ipynb  justfile  pdm.lock.OFF  pyproject.toml  requirements.txt  test-progress-bar.ipynb
.github/workflows/: daily_icloud_clean.yml
app/: app_icloud_email_cleaner.py  app_mvp_fasthtml.py
data/: target_email_address.txt
notebooks/: count-from-emails.ipynb  icloud-cleaner-oo.ipynb  icloud-emails-by-folder.ipynb  icloud-mail-cleaner.ipynb  notebook_helper.py  ocr-image-macos-shortcut.ipynb  test-progress-bar.ipynb
notebooks/archive/: icloud-cleaner.ipynb
src/: icloud-mail-clean-gh-action.py  icloud-mail-clean.py  icloud_mail_cleaner.py  pyproject.py  st_main.py  st_supab.py
src/archive/: icloud_clean_helper.py  icloud_cleaner.py
src/icloud_mail_cleaner/: icloud_mail_cleaner.py
tests/: test_icloud_mail_cleaner.py  testing.md
