[project]
name = "iCloud-mail-cleaner"
version = "0.1.0"
description = "iCloud Mail cleaner"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "configobj>=5.0.8",
    "tqdm>=4.66.1",
    "ipywidgets>=8.1.1",
    "pandas>=2.1.4",
    "st-supabase-connection>=1.2.2",
    "watchdog>=3.0.0",
    "st-login-form>=0.2.1",
    "iCloud-mail-cleaner @ file:///${PROJECT_ROOT}/",
    "duckdb>=0.10.1",
    "loguru>=0.7.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "DataBooth"}



[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "notebook>=7.0.6",
    "black[jupyter]>=23.12.1",
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
