[project]
name = "iCloud-mail-cleaner"
version = "0.1.0"
description = "iCloud Mail cleaner"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "configobj>=5.0.8",
    "tqdm>=4.66.1",
    "ipywidgets>=8.1.1",
    "pandas>=2.1.4",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "python-fasthtml>=0.6.10",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "DataBooth"}


[tool.uv]
dev-dependencies = [
    "notebook>=7.0.6",
    "black[jupyter]>=23.12.1",
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
]
